--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:padding="5dp"
-        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardBackgroundColor="@color/cardview_shadow_start_color"
         app:cardCornerRadius="5dp">
 
         <RelativeLayout
@@ -20,14 +20,17 @@
                 android:id="@+id/pokemon_img"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                />
 
             <TextView
                 android:id="@+id/pokemon_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/pokemon_img"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:gravity="clip_vertical"
+                />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
